--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>VI-NOMAD</title>
+        <title>Void-Intelligence</title>
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
     </head>
 
