Add link to project Vortex

--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
     </head>
 
-    <body>
-        <div>
-            <a href="https://github.com/void-intelligence/nomad">
-                Nomad
-            </a>
-        </div>
+    <body>               
+        <a id="VI" href="https://github.com/void-intelligence/">
+            VOID-INTELLIGENCE
+        </a>
+        <span id="projects">
+            <div id="nomad" >
+                <a href="https://github.com/void-intelligence/nomad">
+                    Nomad
+                </a>
+            </div>
+            <div id="vortex">
+                <a id="vortex" href="https://github.com/void-intelligence/vortex">
+                    Vortex
+                </a>
+            </div> 
+            <!--<div id="profound">
+                <a id="profound" href="https://github.com/void-intelligence/profound">
+                    Profound
+                </a>
+            </div>-->           
+        </span>
     </body>
 </html>
