--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     Vortex
                 </a>
             </div> 
-            <!--<div id="profound">
+            <div id="profound">
                 <a id="profound" href="https://github.com/void-intelligence/profound">
                     Profound
                 </a>
-            </div>-->           
+            </div>         
         </span>
     </body>
 </html>
